[gd_scene load_steps=9 format=3 uid="uid://cu10jyb0dvxau"]

[ext_resource type="Script" path="res://src/maps/cursor_light.gd" id="1_yk3q8"]
[ext_resource type="Texture2D" uid="uid://ct4o8ixctiaa7" path="res://assets/orbs/small.tres" id="2_xwkpy"]
[ext_resource type="AudioStream" uid="uid://dw8num1d2tjxn" path="res://sound/effects/orb_placement.ogg" id="3_88dq7"]
[ext_resource type="AudioStream" uid="uid://54hdvf718y24" path="res://sound/effects/orb_placement_failed.ogg" id="4_sdf8p"]

[sub_resource type="Gradient" id="Gradient_hy5uw"]
offsets = PackedFloat32Array(0, 0.6)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ih77w"]
gradient = SubResource("Gradient_hy5uw")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_frn2k"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y406q"]
radius = 3.0

[node name="CursorLight" type="Node2D"]
script = ExtResource("1_yk3q8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xwkpy")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 3.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_ih77w")

[node name="Detectors" type="Node2D" parent="."]

[node name="OrbDetector" type="Area2D" parent="Detectors"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/OrbDetector"]
shape = SubResource("CircleShape2D_frn2k")

[node name="DarknessDetector" type="Area2D" parent="Detectors"]
unique_name_in_owner = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/DarknessDetector"]
shape = SubResource("CircleShape2D_y406q")

[node name="AudioStreamPlayerPlaceOrb" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_88dq7")
volume_db = 10.0
max_distance = 64.0
attenuation = 2.0
max_polyphony = 15
bus = &"SoundEffects"

[node name="AudioStreamPlayerFailed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sdf8p")
max_polyphony = 15
bus = &"SoundEffects"
